--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
     border-radius: 5px;
     width: 30%;
     position: relative;
-    transition: all 5s ease-in-out;
 }
 
 .summary-popup h2 {
@@ -51,6 +50,7 @@
     color: #000;
     font-family: Arial, sans-serif;
     font-size: 12pt;
+    line-height: 140%;
 }
 
 @media screen and (max-width: 700px) {
